updated alert styling on mobile to fix positioning

--- a/src/styles/3-components/_alert.sass
+++ b/src/styles/3-components/_alert.sass
@@ -109,3 +109,7 @@
       width: auto
       margin: 0 auto
 
+// ============ Media Queries =========== //
+@media only screen and (max-width: 414px)
+  .alert
+    width: auto
